fix editing product

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,7 +7,7 @@
   </td>
   <% p product.id %>
   <td><%= product.brand_model.factory.brand %></td>
-  <td><%= product.brand_model_name %></td>
+  <td><%= product.brand_model.name %></td>
   <td><%= product.article %></td>
   <td><%= product.type_furniture.name %></td>
   <td><%= product.price %></td>
