--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -33,7 +33,7 @@
               { id: 'products_select',
               class: 'chosen-select' } %>
         </div>
-        <div class="form-group">
+        <div class="form-group form-group-sm">
           <%= label_tag :search_query, 'Поиск по артикулу', class: "control-label" %><br>
           <%= f.text_field :search_query, class: "form-control"  %>
         </div>
