alphabetical pagination in Factory

--- a/app/views/factories/index.html.erb
+++ b/app/views/factories/index.html.erb
@@ -8,7 +8,7 @@
   <% end -%>
   </div>
   <div class="new-brand"></div>
- 
+ <%= alphabetical_paginate @alphaParams %> 
   <table class="table table-striped" id="factory">
     <thead>
     <tr>
