--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,9 +15,9 @@
         </div>
         <div class="form-group" id="brand_model">
           <%= label_tag :products_select,'Модель', :class => "control-label" %><br>
-          <%= f.select :brand_model_name,
+          <%= f.select :brand_model_id,
               @brand_models.map { |o| 
-              [o.name, o.name, {"id" => o.id}]},
+              [o.name, o.id, {"id" => o.id}]},
               { include_blank: true },
               { id: 'products_select',
               class: 'chosen-select' }
