--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -2,6 +2,7 @@
 <div id="table_specification_page">
   <p id="notice"><%= notice %></p>
   <%= link_to t('table.print_pdf'), project_specification_table_specifications_path(@project, @specification, @table_specification, format: "pdf") %>
+    <%= link_to 'PDF выбранные', project_specification_index_selected_pdf_path(@project, @specification, @table_specification, format: "pdf") %>
   <div class="print_sum">
     <%= label_tag(:print_sum, t('table.print_sum')) %>
     <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
