--- a/app/assets/stylesheets/pdf.scss.erb
+++ b/app/assets/stylesheets/pdf.scss.erb
@@ -68,18 +68,18 @@ table {
 	td {
 		padding: 5px;
 	}
-	.photo {
-		width: 160px; 
-	}
-
+	/*.photo {
+		width: 21%;
+	}*/
+/*
 	.size {
-		width: 140px; 
+		width: 21%; 
 	}
 	.brand_model {
-		width: 80px;
+		width: 12%;
 	}
 	.finishing_for_client {
-		width: 130px;
+		width: 12%;
 	}
 	.number_of {
 		width: 10px;
@@ -95,7 +95,7 @@ table {
 		width: 80px;
 	}
 	td.finishing_for_client {
-		width: 130px;
+		width: 30px;
 	}
 	td.number_of {
 		width: 10px;
@@ -107,12 +107,12 @@ table {
 		width: 80px;
 	}
 	td.photo img {
-		width: 160px; 
+		width: 60px; 
 	}
 	td.size img {
 		width: 140px; 
 	}
-
+*/
 }
 table, tr, td, th, tbody, thead, tfoot {
     page-break-inside: avoid;
