--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -1,6 +1,24 @@
 <div id="webtable">
   <table width="100%" id="table_specification">
     <thead>
+      <tr class="check_column" id="<%= @specification.id %>">
+        <th></th>
+        <th><%= check_box("photo", @specification.id, {checked: @specification.photo, column: "photo"}) %></th>
+        <th><%= check_box("factory", @specification.id, {checked: @specification.factory, column: "factory"}) %></th>
+        <th><%= check_box("brand_model", @specification.id, {checked: @specification.brand_model, column: "brand_model"}) %></th>
+        <th><%= check_box("article", @specification.id, {checked: @specification.article, column: "article"}) %></th>
+        <th><%= check_box("finishing", @specification.id, {checked: @specification.finishing, column: "finishing"}) %></th>
+        <th><%= check_box("description", @specification.id, {checked: @specification.description, column: "description"}) %></th>
+        <th><%= check_box("size", @specification.id, {checked: @specification.size, column: "size"}) %></th>
+        <th><%= check_box("upf", @specification.id, {checked: @specification.upf, column: "upf"}) %></th>
+        <th><%= check_box("sum_factory", @specification.id, {checked: @specification.sum_factory, column: "sum_factory"}) %></th>
+        <th><%= check_box("number_of", @specification.id, {checked: @specification.number_of, column: "number_of"}) %></th>
+        <th><%= check_box("interest", @specification.id, {checked: @specification.interest, column: "interest"}) %></th>
+        <th><%= check_box("full_price", @specification.id, {checked: @specification.full_price, column: "full_price"}) %></th>
+        <th><%= check_box("full_sum", @specification.id, {checked: @specification.full_sum, column: "full_sum"}) %></th>
+        <th><%= check_box("v", @specification.id, {checked: @specification.v, column: "v"}) %></th>
+        <th><%= check_box("architector", @specification.id, {checked: @specification.architector, column: "architector"}) %></th>
+      </tr>
       <tr>
         <th class="npp">п/п</th>
         <th class="photo">Изображение</th>
