--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -54,7 +54,7 @@
 		<% tables.each do |ts| %>
 		<tr>
 			<% if @specification.photo %>
-				<td width="<%= @css_print["photo"] %>%"><%= image_tag (ts.image(ts.photo_id)).gsub('https', 'http'), width: @css_print["size"] * 10 %></td>
+				<td width="<%= @css_print["photo"] %>%"><%= image_tag (ts.image(ts.photo_id)).gsub('https', 'http'), width: @css_print["photo_px"] %></td>
 			<% end %>
 			<% if @specification.factory %>
 				<td ><%= ts.product.brand_model.factory.brand %></td>
@@ -73,7 +73,7 @@
 			<% end %>
 			<% if @specification.size %>
 				<td width="<%= @css_print["size"] %>%">
-					<%= image_tag ts.image_pdf(ts.size_image_id), width: @css_print["size"] * 10 %>
+					<%= image_tag ts.image_pdf(ts.size_image_id), width: @css_print["size_px"] %>
 					<br>
 					<%= ts.size %>
 				</td>
@@ -114,7 +114,7 @@
 		<% end %>
 		</tr>
 		<tr>
-			<% if @specification.print_sum %>
+			<% if @specification.print_sum && @specification.full_sum %>
 				<td colspan="<%= @specification.colspan_sum[:before] %>"></td>
 				<td class="sum">
 					<%= @selected ? @Model::specification_sum_all(@specification, "sum", "selected") : @Model::specification_sum_all(@specification, "sum") %>
