--- a/app/views/factories/create.js.erb
+++ b/app/views/factories/create.js.erb
@@ -1,2 +1,2 @@
 $('#dialog').modal('toggle');
-$('#factories').append('<%= j render (@factory) %>')
+$('#pagination_table').append('<%= j render (@factory) %>')
