--- a/app/views/factories/index.html.erb
+++ b/app/views/factories/index.html.erb
@@ -23,9 +23,9 @@
         <th class="column9">Группа бренда</th>
     </tr>
     </thead>
-    <tbody id="factories">
-    <%= render @factorys %>
-    </tbody>
+      <tbody id="pagination_table">
+          <%= render @factorys %>
+      </tbody>
   </table>
  
   <%= render 'dialog' %>
