--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -35,7 +35,6 @@
           %>
         </td>
         <td class="article">
-          
           <%= form_for(@product) do |j| %>
           <%= j.select :article,
                   @articles.map { |o| 
@@ -63,7 +62,7 @@
             </div>
           </td>
           <td class="unit_price_factory">
-            <%= f.number_field :unit_price_factory, {value: 0, class: "price"} %>
+            <%= f.number_field :unit_price_factory, {step: 0.001, value: 0, class: "price"} %>
           <td class="factory-sum">0</td>
           <td class="number_of">
             <%= f.number_field :number_of, {value: 1, class: "number"} %>
