--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -54,7 +54,10 @@
 		<% tables.each do |ts| %>
 		<tr>
 			<% if @specification.photo %>
-				<td width="<%= @css_print["photo"] %>%"><%= image_tag (ts.image(ts.photo_id)).gsub('https', 'http'), width: @css_print["photo_px"] %></td>
+				<td width="<%= @css_print["photo"] %>%">
+				<% if Asset.exists?(ts.photo_id) %>
+					<%= image_tag (ts.image(ts.photo_id)).gsub('https', 'http'), width: @css_print["photo_px"] %></td>
+				<% end %>
 			<% end %>
 			<% if @specification.factory %>
 				<td ><%= ts.product.brand_model.factory.brand %></td>
@@ -73,7 +76,9 @@
 			<% end %>
 			<% if @specification.size %>
 				<td width="<%= @css_print["size"] %>%">
-					<%= image_tag ts.image_pdf(ts.size_image_id), width: @css_print["size_px"] %>
+					<% if Asset.exists?(ts.size_image_id) %>
+						<%= image_tag ts.image_pdf(ts.size_image_id), width: @css_print["size_px"] %>
+					<% end %>
 					<br>
 					<%= ts.size %>
 				</td>
