--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -56,7 +56,11 @@
           <td><%= ts.product.brand_model.name if ts.product %></td>
           <td><%= ts.product.article if ts.product %></td>
           <td><%= best_in_place pst, :finishing_for_client, as: :textarea %></td>
-          <td><%= ts.product.type_furniture.name if ts.product %></td>
+          <td>
+            <%= ts.product.type_furniture.name if ts.product %>
+            <br/>
+            <%= best_in_place pst, :description, as: :textarea %>
+          </td>
           <td class="size_images">
             <%= render "table_specifications/size_image/first_in_table", ts: ts %>
             <br>
