add description field to table_specification/table_specification_light

--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -72,7 +72,11 @@
 				<td ><%= ts.finishing_for_client%></td>
 			<% end %>
 			<% if @specification.description %>
-				<td ><%= ts.product.type_furniture.name %></td>
+				<td >
+					<%= ts.product.type_furniture.name %>
+					<br>
+					<%= ts.description %>
+				</td>
 			<% end %>
 			<% if @specification.size %>
 				<td width="<%= @css_print["size"] %>%">
