--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -91,7 +91,7 @@
         <% end %>
       <% end %>
           <br>
-          <span id="shvg"><%= link_to 'ШВГ', '#', {class: "shvg invoker"} %></span>
+          <span id="shvg" display="none"><%= link_to 'ШВГ', '#', {class: "shvg invoker"} %></span>
           <input type="hidden" name="table_specification[packing]" class="packing" value="0">
           <input type="hidden" name="table_specification[add_to_delivery]" class="add_to_delivery" value="0">
 
