--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -67,10 +67,11 @@
             <%= f.number_field :unit_price_factory, {step: 0.001, value: 0, class: "price"} %>
           <td class="factory-sum">0</td>
           <td class="number_of">
-            <%= f.number_field :number_of, {value: 1, class: "number"} %>
+            <%= f.number_field :number_of, {value: 1, class: "number"} %> <br>
+            <%= f.select :type_of_size_id, options_for_select(Table.type_of_size.map {|key, value|["#{value}", "#{key}"]  }) %>
           <td class="interest">
           <p>
-          <%= f.number_field :interest_percent, {value: 30, class: "interest"} %> %
+          <%= f.number_field :interest_percent, {value: 30, class: "interest"} %> 
           </p>
           <p style="white-space:nowrap;"><span class="interest-e">0</span> &euro;</p>
         </td>
