--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -33,7 +33,7 @@
 			<% if @specification.size %>	 			
 				<th width="<%= @css_print["size"] %>%">Размер</th> <% end %>
 			<% if @specification.upf %> 				
-				<th width="<%= @css_print["upf"] %>%">1шт. Фарики</th> <% end %>
+				<th width="<%= @css_print["upf"] %>%">Фарики</th> <% end %>
 			<% if @specification.sum_factory %> 
 				<th width="<%= @css_print["sum_factory"] %>%">Сумма фабрики</th> <% end %>
 			<% if @specification.number_of %>	  
@@ -41,7 +41,7 @@
 			<% if @specification.interest %>	  
 				<th width="<%= @css_print["interest"] %>%">Интерес</th> <% end %>
 			<% if @specification.full_price %>	
-				<th width="<%= @css_print["full_price"] %>%">Цена 1шт.</th> <% end %>
+				<th width="<%= @css_print["full_price"] %>%">Цена</th> <% end %>
 			<% if @specification.full_sum %>		
 				<th width="<%= @css_print["full_sum"] %>%">Сумма</th> <% end %>
 			<% if @specification.v %>						
