--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -62,18 +62,18 @@
             <br>
             <%= best_in_place pst, :size, as: :textarea %></td>
           <td><%= best_in_place pst, :unit_price_factory %></td>
-          <td class="factory-sum"><%= ts.price_from_nil %></td>
+          <td class="factory-sum"><%= ts.price_from_nil.round(2) %></td>
           <td><%= best_in_place pst, :number_of %></td>
           <td>
             <p><%= best_in_place pst, :interest_percent %> %</p>
-            <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest %></span> €</p>
+            <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest.round(2) %></span> €</p>
           </td>
-          <td><%= ts.unit_price %></td>
-          <td><%= ts.with_interest %></td>
+          <td><%= ts.unit_price.round(2) %></td>
+          <td><%= ts.with_interest.round(2) %></td>
           <td>
             <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
             </p>
-            <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest %></span></p>
+            <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order.round(2) %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest.round(2) %></span></p>
             <p>
             <%= link_to 'Удалить запись', pst, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
             </p>
