--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -74,14 +74,14 @@
           </td>
           <td>
             <p><%= best_in_place pst, :interest_percent %> %</p>
-            <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest %></span> €</p>
+            <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest.round(2) %></span> €</p>
           </td>
           <% if ts.group.nil? %>
-            <td class="full_price" ><%= ts.unit_price %></td>
-            <td class="full_sum"><%= ts.summa %></td>
+            <td class="full_price" ><%= ts.unit_price.round(2) %></td>
+            <td class="full_sum"><%= ts.summa.round(2) %></td>
           <% else %>
-            <td class="full_price" ><%= ts.groupDataSum(ts.group, "gp_unit_sum") %></td>
-            <td class="full_sum" "<%= %>"><%= ts.groupDataSum(ts.group, "gp_sum_number") %></td>
+            <td class="full_price" ><%= ts.groupDataSum(ts.group, "gp_unit_sum").round(2) %></td>
+            <td class="full_sum" "<%= %>"><%= ts.groupDataSum(ts.group, "gp_sum_number").round(2) %></td>
           <% end %>
           <td class="v v_table">
           <% unless ts.group.nil? %>
@@ -116,7 +116,7 @@
           <td>
             <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
           </p>
-          <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest %></span></p>
+          <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order.round(2) %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest.round(2) %></span></p>
           <p>
           	<%= link_to 'Удалить запись', pst, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
           </p>
