--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -53,7 +53,7 @@
           <td><%= ts.product.article if ts.product %></td>
           <td><%= best_in_place pst, :finishing_for_client, as: :textarea %></td>
           <td>
-            <%= ts.product.type_furniture.name %>
+            <%= ts.product.type_furniture.name if ts.product %>
             <br>
             <%= best_in_place pst, :description, as: :textarea %>
           </td>
