--- a/app/views/table_specification_lights/_form.html.erb
+++ b/app/views/table_specification_lights/_form.html.erb
@@ -17,6 +17,9 @@
                   class: 'chosen-select' }
           %>
           <br>
+          <select id="list_factor"></select>
+          <%= f.number_field :factor_light %>           
+          <br>
           <div id="number_factor"></div>
           <%= f.hidden_field :increment_discount, value: 0 %>
         </td>
