--- a/app/views/tables/general_methods/list_factor/_form.html.erb
+++ b/app/views/tables/general_methods/list_factor/_form.html.erb
@@ -1,1 +1,1 @@
- <option value="<%= discount_light.id %>" ><%= discount_light.factor %></option>
+ <option value="<%= discount_light.factor %>" ><%= discount_light.factor %></option>
