--- a/app/views/factories/_form.html.erb
+++ b/app/views/factories/_form.html.erb
@@ -61,7 +61,7 @@
   <div class="col-sm-4">
     <div class="form-group" >
       <%= f.label t('brand.light_factor'), :class => "control-label" %>
-      <%= f.number_field :light_factor, :class => "form-control", disabled: "disabled"%>
+      <%= f.number_field :light_factor, :class => "form-control"%>
     </div>
   <div class="form-group">
     <%= f.label "Коэффициент", :class => "control-label" %>
