--- a/app/views/factories/_form.html.erb
+++ b/app/views/factories/_form.html.erb
@@ -61,14 +61,17 @@
   <div class="col-sm-4">
     <div class="form-group" >
       <%= f.label t('brand.light_factor'), :class => "control-label" %>
-      <%= f.number_field :light_factor, :class => "form-control"%>
+      <%= f.number_field :light_factor, :class => "form-control", step: 0.0001%>
     </div>
   <div class="form-group">
     <%= f.label "Коэффициент", :class => "control-label" %>
     <%= f.nested_fields_for :discount_lights do |ff| %>
       <%= ff.remove_nested_fields_link %>
       
-      <%= ff.text_field :factor, :class => "form-control"  %>
+        <%= ff.label "Название партнера", :class => "control-label" %>
+        <%= ff.select :name_parthner, :class => "form-control"  %>
+        <%= ff.label "Значение", :class => "control-label" %>
+        <%= ff.text_field :factor, :class => "form-control"  %>
     <% end %>
     <%= f.add_nested_fields_link :discount_lights, 'Добавить коэффициент' %>
   </div>
