factor_light validate

--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -50,7 +50,7 @@
           <td class="factory"><%= ts.product.brand_model.factory.brand if ts.product %></br>
             <span class="light_factor">
               <% if ts.factor_light.nil? %>
-                <span style="color:red">ТЕКУЩИЙ КОЭФФИЦИЕНТ! ПОМЕНЯТЬ!</span>
+                <span style="color:red">ТЕКУЩИЙ КОЭФФИЦИЕНТ!</span>
                 <br>
                 <span style="color:red"><%= ts.product.brand_model.factory.light_factor %></span>
                 <br>
